fix(Theme): navbar icons alignment

--- a/packages/theme/src/theme/_navbar.scss
+++ b/packages/theme/src/theme/_navbar.scss
@@ -25,4 +25,12 @@
 		margin-top: $navbar-form-margin;
 		margin-bottom: $navbar-form-margin;
 	}
+
+	&-nav {
+		> li > a {
+			height: $navbar-height;
+			display: flex;
+			align-items: center;
+		}
+	}
 }
